--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
+    "jsonwebtoken": "^8.5.1",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
